# DetectiveAgency

./: README.md  abtesting.ipynb  bootstrap.ipynb  notes.ipynb  pyproject.toml  statistics.ipynb
src/: DigitalTwin.py
